--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   contacts_service: ^0.6.1
-  camera: ^0.9.3+1
-  path_provider: ^2.0.5
-  path: ^1.8.0
+  camera: ^0.9.4+3
   flutter_svg: ^0.22.0
   emoji_picker_flutter: ^1.0.7
   shared_preferences: ^2.0.8
+  video_player: ^2.2.5
   
 dev_dependencies:
   flutter_test:
